<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favoritos"
        android:title=""
        android:icon="@drawable/ic_baseline_favorite_border_24"
        app:showAsAction="always"/>
    <item
        android:id="@+id/compartir"
        android:title=""
        android:icon="@drawable/ic_baseline_share_24"
        app:showAsAction="always"/>
    <item android:id="@+id/bautizos"
        android:title="@string/bautizos"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/matrimonio"
        android:title="@string/matrimonios"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/cumpleaños"
        android:title="@string/cumpleaños"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/agregar"
        android:title="@string/agregar"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/agregarsc"
        android:title="@string/agregarsc"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>