<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Servicios.ServiciosFragment">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:fontFamily="@font/coiny"
        android:text="Lista Servicios"
        android:textAlignment="center"
        android:textSize="34sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--Lista Caja No1-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_gray_100"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="25dp">

                <ImageView
                    android:id="@+id/imgP1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:baselineAlignBottom="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/im_bautizo1" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameL1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameList1" />

                    <TextView
                        android:id="@+id/DescriptionL1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionList1" />

                    <TextView
                        android:id="@+id/PriceL1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precioList1" />
                </LinearLayout>
            </LinearLayout>

            <!--Lista Caja No2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_gray_200"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="25dp">

                <ImageView
                    android:id="@+id/imgP2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/im_matrimonio1" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameL2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameList2" />

                    <TextView
                        android:id="@+id/descriptionL2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionList2" />

                    <TextView
                        android:id="@+id/priceL2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precioList2" />
                </LinearLayout>
            </LinearLayout>

            <!--Lista Caja No3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_gray_100"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="25dp">

                <ImageView
                    android:id="@+id/imgP3"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/im_cumple1" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameL3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameList3" />

                    <TextView
                        android:id="@+id/descriptionL3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionList3" />

                    <TextView
                        android:id="@+id/priceL3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precioList3" />
                </LinearLayout>
            </LinearLayout>

            <!--Lista Caja No3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blue_gray_200"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="25dp">

                <ImageView
                    android:id="@+id/imgP4"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/im_grado1" />

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameL4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameList4" />

                    <TextView
                        android:id="@+id/descriptionL4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionList4" />

                    <TextView
                        android:id="@+id/priceL4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precioList4" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>